test/oscar/compiler/errors/immutReassignment.oscar
def main() => unit = {
  int x = 1;
  x = 4;
}